--- a/index.html
+++ b/index.html
@@ -1,10 +1,46 @@
-
 <!DOCTYPE html>
 <html>
 	<head>
-	</head>
+	 <title>Mon CV</title>
+	 <style type="text/css">
+	 
+  h1 {
+    color: brun;
+	background-color: #cc99ff;
+     }
+	 p {
+    color: blue;
+     }
+  </style>
+	 </head>
 	<body>
-		<h1>My First Heading</h1>
-		<p>My first paragraph.</p>
+	
+	
+		<h1>A la recherge d'un stage de fin d'étude en informatique</h1>
+		<p>Informations générales</p>
+		<ul>
+		<ol>* Nom: EL-GHARISI</ol>
+		<ol>* Prénom: Abderrahim</ol>
+		<ol>* Date et lieu de naissance: Nador le 10/11/1992</ol>
+		<ol>* Adresse: 3 avenue A.Einstein 69600 Lyon</ol>
+		<ol>* Mail: elgharisiabderrahim@gmail.com</ol>
+		<ol>* LinkedIn: EL-GHARISI Abderrahim</ol>
+		</ul>
+		
+		<p>Diplômes d'études supérieures</p>
+		<ul>
+		<ol>* Master 2 en Informatique CCI Université Claude Bernard Lyon1 Lyon / De 2018 à 2019</ol>
+		<ol>Master Sciences des matériaux multifonctionnels et nouvelles technologies pour l'énergie Université François Rabelais-UFR des sciences et technique Tours / De 2017 à 2018</ol>
+		<ol>Licence d’Etudes Fondamentales spécialité sciences de la matière physique; Université Mohamed I – Faculté des sciences Oujda / De 2015 à 2016</ol>
+		<ol>Diplôme d’études universitaires générales spécialité sciences de la matière physique; Université Mohamed I – Faculté des sciences Oujda / De 2014 à 2015</ol>
+		</ul>
+		
+		
+		
+		 
+	
+		
+		
+		
 	</body>
 </html>
